sbt 2.0.0-RC9